# website-calculator

./: .gitignore  README.md  apply_formatting.py  export.py  main.py  outdated.py  pyproject.toml
.github/workflows/: windows-build.yml
src/: apply_formatting.py  export.py  main.py
src/website_calc/: __main__.py  app.py  apply_formatting.py  export.py
src/website_calc.dist-info/: METADATA  top_level.txt
src/website_calc/widgets/: base_price_field.py  page.py  section.py
src/website_calculator/: __main__.py  app.py  export.py
src/website_calculator/resources/: AppIcon.icns
src/website_calculator/widgets/: currency_dropdown.py  page.py
